--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,11 +2,35 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
+    - id: check-added-large-files
+    - id: check-case-conflict
+    - id: check-docstring-first
+    - id: check-merge-conflict
+    - id: check-symlinks
+    - id: check-toml
+    - id: debug-statements
+    - id: mixed-line-ending
+    - id: requirements-txt-fixer
+    - id: trailing-whitespace
+    - id: check-yaml
+    - id: end-of-file-fixer
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
     -   id: black
+
+# ## Turning them off because some modules are not completed yet
+# - repo: https://github.com/astral-sh/ruff-pre-commit
+#   # Ruff version.
+#   rev: v0.6.1
+#   hooks:
+#     # Run the linter.
+#     - id: ruff
+#       args: [ --fix ]
+#     # Run the formatter.
+#     - id: ruff-format
+
+# - repo: https://github.com/RobertCraigie/pyright-python
+#   rev: v1.1.376
+#   hooks:
+#     - id: pyright
